@@ -1,3 +1,8 @@
+2008-07-20  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-util.c: (theme_delete): don't delete ~/.icons when deleting
+	the last icon theme (bug #543763)
+
 2008-07-15  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 533611 - add notification themes to the metatheme format
